tests/success/pop.avm
; test pop
push int8(0)
pop
push int16(1)
pop
exit
