tests/fail/mod_by_zero.avm
push int8(125)
push int32(0)
mod
exit
